site configs & analytics

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-hacker
+title: Sunderi Pranata
+description: A Sotfware Engineer riding a Unicorn in Indonesia
+show_downloads: false
+google_analytics: UA-165854779-1
