--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-hacker
 title: Sunderi Pranata
-description: A Software Engineer riding a Unicorn in Indonesia
+description: Product Manager.
 show_downloads: false
 show_github_repo: false
 google_analytics: UA-165854779-1
